<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.ProfilesFragment"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/id_cover_image"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:src="@drawable/back_profile_lite"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profileImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="95dp"
                    android:src="@android:drawable/sym_def_app_icon"
                    app:civ_border_color="#ffff00"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/profile_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="Manuel Alejandro López"
                    android:textColor="#fff"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawableTint="#878787"
                    android:text="Vigo, España"
                    android:textColor="#878787"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="335dp"

                app:cardElevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Points"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="125"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorOnPrimary"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Por vistar"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1205"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorOnPrimary"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Share"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="360"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorOnPrimary"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="475dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/mail"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/email_sample"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/ic_person">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/phone"
                    app:startIconDrawable="@drawable/ic_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="@dimen/dp_16"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/profile_btn_password"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:elevation="6dp"

                        android:text="@string/password"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/colorOnPrimary"

                        app:icon="@drawable/ic_password"
                        app:iconGravity="textStart"
                        app:iconPadding="10dp"
                        app:iconTint="@color/white"

                        app:layout_constraintEnd_toStartOf="@+id/profile_btn_save"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/profile_btn_save"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:elevation="6dp"

                        android:text="@string/save_changes"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/colorOnPrimary"

                        app:icon="@drawable/ic_save"
                        app:iconGravity="textStart"
                        app:iconPadding="10dp"
                        app:iconTint="@color/white"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/profile_btn_password"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:text="SrKqBlweMLVvsqTxB3lQcHi12vH3"
            android:textColor="@color/colorPrimaryVariant"/>

    </LinearLayout>

</ScrollView>
